--- a/training/pom.xml
+++ b/training/pom.xml
@@ -18,6 +18,37 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+
+<build>
+  <plugins>
+  <plugin>
+      <groupId>org.jacoco</groupId>
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>0.5.5.201112152213</version>
+      <configuration>
+         <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
+         <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
+      </configuration>
+      <executions>
+       <execution>
+         <id>jacoco-initialize</id>
+         <goals>
+          <goal>prepare-agent</goal>
+         </goals>
+      </execution>
+      <execution>
+        <id>jacoco-site</id>
+        <phase>package</phase>
+        <goals>
+          <goal>report</goal>
+         </goals>
+       </execution>
+     </executions>
+   </plugin>
+  </plugins>
+  </build>
+
+
   
 
   <dependencies>
